--- a/.drone.yml
+++ b/.drone.yml
@@ -1,14 +1,14 @@
 pipeline:
   build_and_deploy_code:
-      image: maven
-      privileged: true
-      when:
-        branch: [master, develop]
-      volumes:
-        - /var/run/docker.sock:/var/run/docker.sock
-      secrets: [ access_key, access_key_id ]
-      commands:
-        - ./build-deploy.sh
+    image: maven
+    privileged: false
+    when:
+      branch: [master, develop]
+    environment:
+      - DOCKER_HOST=tcp://172.17.0.1:2375
+    secrets: [ access_key, access_key_id ]
+    commands:
+      - ./build-deploy.sh
   notify_slack:
     image: plugins/slack
     webhook: https://hooks.slack.com/services/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
@@ -16,13 +16,15 @@ pipeline:
     when:
       status: [success, failure]
   deploy_docker_image:
-    image: docker:stable-dind
-    privileged: true
+    image: docker:17.09.0-ce
+    secrets:
+      - docker_password
+    privileged: false
     when:
       branch: [master, develop]
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+    environment:
+      - DOCKER_HOST=tcp://172.17.0.1:2375
     commands:
       - apk update
       - apk add libxml2-utils
-      - ./docker-deploy.sh egar-files-api 
+      - ./docker-deploy.sh egar-files-api
