Updated health endpoint check in K8s config

--- a/scripts/kube/files-api-deployment-template.yaml
+++ b/scripts/kube/files-api-deployment-template.yaml
@@ -73,7 +73,7 @@ spec:
           initialDelaySeconds: 120
           periodSeconds: 20
           httpGet:
-            path: /health
+            path: /healthz
             port: 8080
         resources: {}
       restartPolicy: Always
